--- a/FindMyBro/Base.lproj/Main.storyboard
+++ b/FindMyBro/Base.lproj/Main.storyboard
@@ -37,6 +37,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tac-U2-q3d">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Login or create account" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MgA-6h-jKn">
                                 <rect key="frame" x="16" y="72" width="378" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -79,7 +82,7 @@
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eHl-pK-2s0">
-                                <rect key="frame" x="16" y="404" width="374" height="36"/>
+                                <rect key="frame" x="20" y="404" width="374" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" weight="thin" pointSize="20"/>
@@ -92,9 +95,21 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="tac-U2-q3d" secondAttribute="bottom" id="H8v-z0-yHn"/>
+                            <constraint firstItem="tac-U2-q3d" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="IHo-5Q-dPz"/>
+                            <constraint firstItem="tac-U2-q3d" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Mfe-La-ucY"/>
+                            <constraint firstItem="tac-U2-q3d" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Olr-gc-dMn"/>
+                            <constraint firstAttribute="trailing" secondItem="tac-U2-q3d" secondAttribute="trailing" id="Rg3-Hk-BY4"/>
+                            <constraint firstItem="tac-U2-q3d" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="YW8-tw-Jjf"/>
+                            <constraint firstItem="tac-U2-q3d" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ZN4-Om-ol7"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="tac-U2-q3d" secondAttribute="bottom" id="pCA-s4-Eyg"/>
+                            <constraint firstAttribute="trailing" secondItem="tac-U2-q3d" secondAttribute="trailing" id="txb-kE-QTz"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Hrn-Ly-7sR"/>
                     <connections>
+                        <outlet property="bgImageView" destination="tac-U2-q3d" id="seD-f8-yD2"/>
                         <outlet property="loginButton" destination="ddh-KI-xov" id="dAB-xt-mtD"/>
                         <outlet property="passwordField" destination="KJW-xs-WUP" id="l2a-Mu-ZAj"/>
                         <outlet property="phoneNumberField" destination="IeL-c4-91x" id="jTl-bZ-dNs"/>
